add portfolio page

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -1,10 +1,299 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Portfolio</title>
 </head>
 <body>
-$END$
+
+<div class="wrapper">
+
+    <!--HEADER-->
+    //= template/header.html
+
+
+    <main id="portfolio">
+
+        <!--SECTION FILTER-->
+        <section class="section-filter">
+            <div class="container">
+                <div class="section-title">
+                    <h2>Latest projects</h2>
+                </div>
+                <div class="filter-holder">
+                    <div>
+                        <form action="/" method="post">
+                            <p>
+                                <label for="portfolio-select">Filer By:</label>
+                                <select id="portfolio-select">
+                                    <option selected value="Крокодил Гена">Business engineering</option>
+                                    <option value="Gamble">Gamble website</option>
+                                    <option value="webMobile">Web & Mobile application</option>
+                                    <option value="Web">Web application</option>
+                                    <option value="e-commerce">E-commerce website</option>
+                                </select>
+                            </p>
+                        </form>
+                    </div>
+                    <ul class="portfolio-nav">
+                        <li><a href="#" class="active">all</a></li>
+                        <li><a href="#">e-commerce</a></li>
+                        <li><a href="#">health care</a></li>
+                        <li><a href="#">gambling</a></li>
+                        <li><a href="#">real estate</a></li>
+                        <li><a href="#">logistics</a></li>
+                        <li><a href="#">finance</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!--SECTION CARDS PORTFOLIO-->
+        <section class="section section-projects">
+            <div class="projects-holder">
+                <div class="card-project">
+                    <img src="img/sigma.jpg" alt="SIGMA"/>
+                    <div class="mask">
+                        <h2>SIGMA ONLINE</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>SIGMA ONLINE</h3>
+                        <span>Web application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/resemary.jpg" alt="ROSEMARY"/>
+                    <div class="mask">
+                        <h2>Rosemary</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>ROSEMARY</h3>
+                        <span>Mobile application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/candy-skins.jpg" alt="CANDY SKINS"/>
+                    <div class="mask">
+                        <h2>CANDY SKINS</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>candy skins</h3>
+                        <span>Gamble website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/voltic.jpg" alt="VOLTIC"/>
+                    <div class="mask">
+                        <h2>CS:GO VOLTIC</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>CS:GO VOLTIC</h3>
+                        <span>Gamble website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/cashtransfer.jpg" alt="CRASHTRANSFER"/>
+                    <div class="mask">
+                        <h2>CRASHTRANSFER</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>CRASHTRANSFER</h3>
+                        <span>Mobile website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/firenze-pulizia-strade.jpg" alt="FIRENZE-PILIZIA-STRADE"/>
+                    <div class="mask">
+                        <h2>FIRENZE-PILIZIA-STRADE</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>FIRENZE-PILIZIA-STRADE</h3>
+                        <span>Mobile application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/playersbid.jpg" alt="PLAYERSBID"/>
+                    <div class="mask">
+                        <h2>PLAYERSBID</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>playersbid</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/luminarc.jpg" alt="LUMINARC"/>
+                    <div class="mask">
+                        <h2>LUMINARC</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>LUMINARC</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/mi-farmacia.jpg" alt="MI-FARMACIA"/>
+                    <div class="mask">
+                        <h2>MI-FARMACIA</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>MI-FARMACIA</h3>
+                        <span>Mobile application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/baliprorent.jpg" alt="BALIPRORENT"/>
+                    <div class="mask">
+                        <h2>BALIPRORENT</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>BALIPRORENT</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/get-eat.jpg" alt="GET-EAT"/>
+                    <div class="mask">
+                        <h2>GET-EAT</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>GET-EAT</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/mosenergo.jpg" alt="MOSENERGO"/>
+                    <div class="mask">
+                        <h2>MOSENERGO</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                            exercitation ullamco laboris nisi ut.</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>MOSENERGO</h3>
+                        <span>Mobile application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/craftfoxes.jpg" alt="CRAFTFOXES"/>
+                    <div class="mask">
+                        <h2>CRAFTFOXES</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>CRAFTFOXEST</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/overmoth.jpg" alt="OVERMOUTH"/>
+                    <div class="mask">
+                        <h2>OVERMOUTH</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>OVERMOUTH</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/odrex.jpg" alt="ODREX"/>
+                    <div class="mask">
+                        <h2>ODREX</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>ODREX</h3>
+                        <span>Web application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/evarthdrive.jpg" alt="EVART DRIVE"/>
+                    <div class="mask">
+                        <h2>EVART DRIVE</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>EVART DRIVE</h3>
+                        <span>Mobile application</span>
+                    </div>
+                </div>
+                <div class="card-project">
+                    <img src="img/vhn.jpg" alt="VHN"/>
+                    <div class="mask">
+                        <h2>VHN.UA</h2>
+                        <p>short description project short description project short description project</p>
+                        <a href="#" class="arrow-btn"></a>
+                    </div>
+                    <div class="card-description">
+                        <h3>VHN.UA</h3>
+                        <span>E-commerce website</span>
+                    </div>
+                </div>
+                <div class="card-order">
+                    <div class="company-logo">
+                        <div>
+                            <img src="img/logo.png" alt="LineUp">
+                        </div>
+                    </div>
+                    <div>
+                        <a href="#" class="default-btn">i want to make an order</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+
+
+    <!--FOOTER-->
+    //= template/footer.html
+
+</div>
+
 </body>
 </html>
