--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
                     <h2>Other gambling & betting projects</h2>
                 </div>
                 <div class="projects-holder">
-                    <div class="card-technologies">
+                    <div class="card-project">
                         <img src="img/candy-skins.jpg"/>
                         <div class="mask">
                             <h2>CANDY SKINS</h2>
@@ -211,7 +211,7 @@
                             <span>Gamble website</span>
                         </div>
                     </div>
-                    <div class="card-technologies">
+                    <div class="card-project">
                         <img src="img/voltic.jpg"/>
                         <div class="mask">
                             <h2>CS:GO VOLTIC</h2>
@@ -223,7 +223,7 @@
                             <span>Gamble website</span>
                         </div>
                     </div>
-                    <div class="card-technologies">
+                    <div class="card-project">
                         <img src="img/playersbid.jpg"/>
                         <div class="mask">
                             <h2>PLAYERSBID</h2>
