add candyskins presetation page

--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                 exercitation ullamco laboris nisi ut.</p>
-                            <a href="#" class="arrow-btn"></a>
+                            <a href="candyskins.html" target="_blank" class="arrow-btn"></a>
                         </div>
                         <div class="card-description">
                             <h3>candy skins</h3>
@@ -216,7 +216,7 @@
                         <div class="mask">
                             <h2>CS:GO VOLTIC</h2>
                             <p>short description project short description project short description project</p>
-                            <a href="#" class="arrow-btn"></a>
+                            <a href="voltic.html" target="_blank" class="arrow-btn"></a>
                         </div>
                         <div class="card-description">
                             <h3>CS:GO VOLTIC</h3>
@@ -228,7 +228,7 @@
                         <div class="mask">
                             <h2>PLAYERSBID</h2>
                             <p>short description project short description project short description project</p>
-                            <a href="#" class="arrow-btn"></a>
+                            <a href="index.html" target="_self" class="arrow-btn"></a>
                         </div>
                         <div class="card-description">
                             <h3>playersbid</h3>
