--- a/src/candyskins.html
+++ b/src/candyskins.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
-    <title>Voltic</title>
+    <title>Candy Skins</title>
 </head>
 <body>
 <div class="wrapper">
@@ -16,13 +16,13 @@
     //= template/header.html
 
     <!--MAIN CONTENT-->
-    <main id="voltic">
+    <main id="candySkins">
 
         <!--INTRODUCTION SECTION-->
         <section class="section introduction-section">
             <div class="container">
                 <div class="section-title">
-                    <h2>cs:go voltic</h2>
+                    <h2>candy skins</h2>
                 </div>
                 <div class="holder-introduction-section">
                     <div class="description">
@@ -59,31 +59,6 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adpiscing elit, sed do eiusmod tempor incididunt ut
                             labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                             laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!--SECTION STATICS-->
-        <section class="section section-statics">
-            <div class="container container-inner">
-                <div class="holder-section-static">
-                    <div>
-                        <div>
-                            <img src="../img/selling-img-voltic.png" alt="selling">
-                        </div>
-                    </div>
-                    <div>
-                        <div class="section-title align-left">
-                            <h2>Statistics</h2>
-                        </div>
-                        <div class="description">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation ullamco
-                                laboris nisi ut aliquip ex ea commodo consequat.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -204,7 +179,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                 exercitation ullamco laboris nisi ut.</p>
-                            <a href="candyskins.html" target="_blank" class="arrow-btn"></a>
+                            <a href="candyskins.html" target="_self" class="arrow-btn"></a>
                         </div>
                         <div class="card-description">
                             <h3>candy skins</h3>
@@ -216,7 +191,7 @@
                         <div class="mask">
                             <h2>CS:GO VOLTIC</h2>
                             <p>short description project short description project short description project</p>
-                            <a href="voltic.html" target="_self" class="arrow-btn"></a>
+                            <a href="voltic.html" target="_blank" class="arrow-btn"></a>
                         </div>
                         <div class="card-description">
                             <h3>CS:GO VOLTIC</h3>
